--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <title>Mi negocio</title>
 </head>
 <body>
-    <img src="banner-principal.jpg" alt="banner-principal">
+    <nav></nav>
+        <img src="banner-principal.jpg" alt="ñññ">
+        <a href="index.html">Inicio</a> | 
+        <a href="us.html">¿Quienes somos?</a> | 
+        <a href="Productos.html">Productos</a> |
+        <a href="Contactanos.html">Contactanos</a>
+    </nav>
     <h1>Perritas locas</h1>
     <h2>Cuidamos todas sus mascotas</h2>
     <p>La veterinaria "Perritas locas" abrió sus puertas hace 15 años con el objetivo de ofrecer atención de calidad y cercana a las mascotas de la comunidad. Fundada por la Dra. Marta González, una veterinaria con más de 20 años de experiencia, comenzó como un pequeño consultorio en una zona residencial. Con el tiempo, su enfoque en el bienestar animal y la dedicación hacia cada paciente hicieron que la demanda creciera, lo que permitió expandir sus servicios y equipos.
