--- a/index.html
+++ b/index.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Mi negocio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
-<body>
-    <nav></nav>
-        <img src="banner-principal.jpg" alt="ñññ">
-        <a href="index.html">Inicio</a> | 
-        <a href="us.html">¿Quienes somos?</a> | 
-        <a href="Productos.html">Productos</a> |
-        <a href="Contactanos.html">Contactanos</a>
-    </nav>
-    <h1>Perritas locas</h1>
-    <h2>Cuidamos todas sus mascotas</h2>
-    <p>La veterinaria "Perritas locas" abrió sus puertas hace 15 años con el objetivo de ofrecer atención de calidad y cercana a las mascotas de la comunidad. Fundada por la Dra. Marta González, una veterinaria con más de 20 años de experiencia, comenzó como un pequeño consultorio en una zona residencial. Con el tiempo, su enfoque en el bienestar animal y la dedicación hacia cada paciente hicieron que la demanda creciera, lo que permitió expandir sus servicios y equipos.
 
-        Hoy en día, "Perritas locas" es una clínica reconocida, con un equipo multidisciplinario que ofrece desde consultas generales hasta cirugía avanzada y emergencias. Durante estos años, se ha ganado la confianza de cientos de familias que confían el cuidado de sus mascotas a esta clínica, que sigue manteniendo su compromiso de calidad y amor por los animales.</p>
+<body>
+    <header>
+        <nav>
+            <img src="banner-principal.jpg" alt="ñññ">
+            <ul>
+                <li><a href="index.html"><i class="fa fa-home"></i>Inicio</a> </li>
+                <li><a href="us.html"><i class="fa fa-drivers-license-o"></i>¿Quienes somos?</a></li>
+                <li><a href="Productos.html"><i class="fa fa-shopping-cart"></i>Productos</a></li>
+                <li><a href="Contactanos.html"><i class="fa fa-phone-square"></i>Contactanos</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+    <h1>Huellitas</h1>
+    <h2>Cuidamos todas sus mascotas</h2>
+    <p>La veterinaria "Perritas locas" abrió sus puertas hace 15 años con el objetivo de ofrecer atención de calidad y
+        cercana a las mascotas de la comunidad. Fundada por la Dra. Marta González, una veterinaria con más de 20 años
+        de experiencia, comenzó como un pequeño consultorio en una zona residencial. Con el tiempo, su enfoque en el
+        bienestar animal y la dedicación hacia cada paciente hicieron que la demanda creciera, lo que permitió expandir
+        sus servicios y equipos.
+
+        Hoy en día, "Perritas locas" es una clínica reconocida, con un equipo multidisciplinario que ofrece desde
+        consultas generales hasta cirugía avanzada y emergencias. Durante estos años, se ha ganado la confianza de
+        cientos de familias que confían el cuidado de sus mascotas a esta clínica, que sigue manteniendo su compromiso
+        de calidad y amor por los animales.</p>
     <h2>Mision</h2>
-    <p>En Veterinaria Perritas Locas, nuestra misión es brindar atención médica de excelencia a todas las mascotas, especialmente a nuestros fieles amigos caninos, asegurando su bienestar físico y emocional en cada etapa de su vida. Nos comprometemos a ofrecer un ambiente cálido y amigable, donde tanto los perros como sus dueños se sientan cómodos y tranquilos. A través de un equipo altamente capacitado, tecnología de punta y un trato personalizado, trabajamos para garantizar que cada visita sea una experiencia positiva, promoviendo la salud y felicidad de los animales que nos confían.</p>
+    <p>En Veterinaria Perritas Locas, nuestra misión es brindar atención médica de excelencia a todas las mascotas,
+        especialmente a nuestros fieles amigos caninos, asegurando su bienestar físico y emocional en cada etapa de su
+        vida. Nos comprometemos a ofrecer un ambiente cálido y amigable, donde tanto los perros como sus dueños se
+        sientan cómodos y tranquilos. A través de un equipo altamente capacitado, tecnología de punta y un trato
+        personalizado, trabajamos para garantizar que cada visita sea una experiencia positiva, promoviendo la salud y
+        felicidad de los animales que nos confían.</p>
     <h2>Vision</h2>
-    <p>En Veterinaria Perritas Locas, nuestra visión es ser reconocidos como líderes en el cuidado y bienestar de las mascotas, especialmente los perros, a nivel local y regional. Buscamos convertirnos en un referente en la atención veterinaria, ofreciendo servicios innovadores y de calidad, con un enfoque integral que promueva la salud física y emocional de cada animal. Queremos ser el lugar de confianza donde los dueños encuentren el mejor cuidado para sus compañeros peludos, con un equipo apasionado por brindarles lo mejor, siempre con amor y dedicación.</p>
+    <p>En Veterinaria Perritas Locas, nuestra visión es ser reconocidos como líderes en el cuidado y bienestar de las
+        mascotas, especialmente los perros, a nivel local y regional. Buscamos convertirnos en un referente en la
+        atención veterinaria, ofreciendo servicios innovadores y de calidad, con un enfoque integral que promueva la
+        salud física y emocional de cada animal. Queremos ser el lugar de confianza donde los dueños encuentren el mejor
+        cuidado para sus compañeros peludos, con un equipo apasionado por brindarles lo mejor, siempre con amor y
+        dedicación.</p>
+    </section>
 
 </body>
+
 </html>
